se agrega test para trigger ejercisio 2

--- a/force-app/main/default/classes/TriggerExercise2.cls
+++ b/force-app/main/default/classes/TriggerExercise2.cls
@@ -1,16 +1,13 @@
 public with sharing class TriggerExercise2 {
-    //TODO - AGREGAR TEST
     //case relacionado con case es con el caso padre
     public static void dosomething(List<Case> cases) {
         List<Case> parentCaseToUpdate=new List<Case>();
         Map<Id,Case> parentMap=new Map<Id,Case>();
 
-
         for (Case aCase : cases)  {
-            if(aCase.Result__c !=null){
-                Case parentCase=[select Id, Result__c from Case where Id=:aCase.ParentId];
-                parentMap.put(aCase.Id,parentCase);
-            }
+            Case parentCase=[select Id, Result__c from Case where Id=:aCase.ParentId];
+            ID acaseId=aCase.Id;
+            parentMap.put(acaseId,parentCase);
         }
 
         for (Case aCase : cases) {
