Corrección ejercicios triggers

--- a/force-app/main/default/classes/CaseTriggerHandler.cls
+++ b/force-app/main/default/classes/CaseTriggerHandler.cls
@@ -1,4 +1,4 @@
-public with sharing class CaseManage {
+public with sharing class CaseTriggerHandler {
     
     public static void relatedCaseWithTask(List<Case> cases) {
                 
