--- a/force-app/main/default/classes/CaseTriggerTest.cls
+++ b/force-app/main/default/classes/CaseTriggerTest.cls
@@ -1,13 +1,22 @@
 @IsTest
 public with sharing class CaseTriggerTest {
 
+    @TestSetup
+    static void makeData(){
+        Contact aContact = new Contact(
+            FirstName = 'Julian',
+            LastName = 'Ibarra');
+        insert aContact;
+    }
+
     @IsTest
     public static void whenCreateCaseAndExistsTaskCreatedTwoMinutesBeforeShouldRelatedToCase() {
 
-        Contact aContact = new Contact(
-            FirstName = 'Julian',
-            LastName = 'Ibarra');       
-        insert aContact;
+        Contact aContact = [
+            Select Id 
+            From Contact 
+            Where LastName = 'Ibarra'
+        ];
 
         Task aTask = new Task(
             WhoId = aContact.Id, 
@@ -19,8 +28,11 @@ public with sharing class CaseTriggerTest {
         insert aCase;
         Test.stopTest();
         
-        List<Task> tasks = [Select Id, WhatId From Task 
-                            Where WhoId = :aContact.Id];
+        List<Task> tasks = [
+            Select Id, WhatId 
+            From Task 
+            Where WhoId = :aContact.Id
+        ];
 
         System.assertEquals(aCase.Id, tasks.get(0).WhatId, 'Should be a task related to case');
     }
@@ -28,10 +40,11 @@ public with sharing class CaseTriggerTest {
     @IsTest
     public static void whenCreateCaseAndExistsTaskCreateFourMinutesBeforeShouldNotRelatedToCase() {
 
-        Contact aContact = new Contact(
-            FirstName = 'Julian',
-            LastName = 'Ibarra');       
-        insert aContact;
+        Contact aContact = [
+            Select Id 
+            From Contact 
+            Where LastName = 'Ibarra'
+        ];
 
         Task aTask = new Task(
             WhoId = aContact.Id, 
@@ -44,8 +57,11 @@ public with sharing class CaseTriggerTest {
         insert aCase;        
         Test.stopTest();
 
-        List<Task> tasks = [Select Id, WhatId From Task 
-                            Where WhoId = :aContact.Id];
+        List<Task> tasks = [
+            Select Id, WhatId 
+            From Task 
+            Where WhoId = :aContact.Id
+        ];
      
         System.assertNotEquals(aCase.Id, tasks.get(0).WhatId, 'Should not be a task related to case');
        
@@ -65,7 +81,12 @@ public with sharing class CaseTriggerTest {
         update aCase;
         Test.stopTest();
 
-        Case caseResult = [Select Id, Result__c From Case Where Id = :childCase.Id];
+        Case caseResult = [
+            Select Id, Result__c 
+            From Case 
+            Where Id = :childCase.Id
+        ];
+
         System.assertEquals(aCase.Result__c, caseResult.Result__c, 'Should update field Result__c in childCase');
 
     }
@@ -73,8 +94,13 @@ public with sharing class CaseTriggerTest {
     @IsTest
     public static void whenModifyFieldResultBlankShouldModifyResultInAssocitedCases() {
 
-        Case aCase = new Case(Status = 'New', Result__c = 'Parent Created');
-        Case childCase = new Case(Status = 'New', Result__c = 'Child Created');
+        Case aCase = new Case(
+            Status = 'New', 
+            Result__c = 'Parent Created');
+        Case childCase = new Case(
+            Status = 'New', 
+            Result__c = 'Child Created');
+
         insert aCase;
         childCase.ParentId = aCase.Id;
         insert childCase;
@@ -84,7 +110,12 @@ public with sharing class CaseTriggerTest {
         update aCase;
         Test.stopTest();
 
-        Case caseResult = [Select Id, Result__c From Case Where Id = :childCase.Id];
+        Case caseResult = [
+            Select Id, Result__c 
+            From Case 
+            Where Id = :childCase.Id
+        ];
+
         System.assertEquals(aCase.Result__c, caseResult.Result__c, 'Should update field Result__c in childCase');
 
     }
