--- a/force-app/main/default/classes/CaseTriggerTest.cls
+++ b/force-app/main/default/classes/CaseTriggerTest.cls
@@ -4,20 +4,91 @@ public with sharing class CaseTriggerTest {
     @TestSetup
     static void makeData(){
 
+        Contact aContact = new Contact(
+            LastName = 'contacto',
+            Email = 'contacto@correo.com'
+            );
+        insert aContact;
+
+        Task aTask = new Task(WhoId=aContact.Id, Type = 'Call');
+        insert aTask;
+
+
         Case aCase1 = new Case(Result__c = 'Not edited');
         Case aCase2 = new Case(Result__c = 'Not edited');
-
         
         List<Case> cases = new List<Case>();
         cases.add(aCase1);
-        cases.add(aCase2);
-        
+        cases.add(aCase2);        
         insert cases;
 
         aCase1.ParentId = aCase2.Id;
-
         update cases;
     }   
+
+
+    @isTest static void insertCaseWhenThereIsACallCreatedOneMinuteBeforeTheCase(){
+        Contact aContact = [
+            SELECT Id
+            FROM Contact
+            WHERE Email = 'contacto@correo.com'
+            LIMIT 1
+        ];
+
+        Task aTask = [
+            SELECT Id
+            FROM Task
+            WHERE WhoId = :aContact.Id
+            LIMIT 1
+        ];
+
+        Case aCase = new Case(ContactId = aContact.Id);
+        Test.setCreatedDate(aTask.Id, Datetime.now().addMinutes(-1));
+        Test.startTest();
+        insert aCase;
+        Test.stopTest();
+
+        Task taskEdited = [
+            SELECT Id, WhatId
+            FROM Task
+            WHERE WhoId = :aContact.Id
+            LIMIT 1
+        ];
+
+        System.assertEquals(aCase.Id, taskEdited.WhatId);
+    }
+
+
+    @isTest static void insertCaseWhenThereAreNotCallsCreatedTwoMinutesOrLessBeforeTheCase(){
+        Contact aContact = [
+            SELECT Id
+            FROM Contact
+            WHERE Email = 'contacto@correo.com'
+            LIMIT 1
+        ];
+
+        Task aTask = [
+            SELECT Id
+            FROM Task
+            WHERE WhoId = :aContact.Id
+            LIMIT 1
+        ];
+
+        Case aCase = new Case(ContactId = aContact.Id);
+        Test.setCreatedDate(aTask.Id, Datetime.now().addMinutes(-4));
+        Test.startTest();
+        insert aCase;
+        Test.stopTest();
+
+        Task taskEdited = [
+            SELECT Id, WhatId
+            FROM Task
+            WHERE WhoId = :aContact.Id
+            LIMIT 1
+        ];
+
+        System.assertEquals(null, taskEdited.WhatId);
+    }
 
 
    @isTest static void updateAssociatedCasesWhenResultChanges(){
