--- a/force-app/main/default/classes/AccountManageTest.cls
+++ b/force-app/main/default/classes/AccountManageTest.cls
@@ -10,7 +10,7 @@ public with sharing class AccountManageTest {
         anAccount.create_opportunity__c=true;
         anAccount.Document_number__c='Test1234';
         anAccount.Identification_type__c='NIT';
-        anAccount.name='Gerardo Test';
+        anAccount.name='Test';
 
         ListAccount.add(anAccount);
         AccountManage2.createOpportunity(ListAccount);
@@ -20,8 +20,8 @@ public with sharing class AccountManageTest {
                                   WHERE name like 'Opportunity%'
                                   LIMIT 1];
 
-        System.assertEquals('Opportunity Gerardo Test',anOpportinity.Name.Substring(0,24), 'The Name not match');
+        System.assertEquals('Opportunity Test',anOpportinity.Name.Substring(0,16), 'The Name not match');
         System.assertEquals('Prospection',anOpportinity.StageName, 'The StageName not match');
-        System.assert(anOpportinity.CloseDate != null, 'The Close Date is Empty');
+        System.assertEquals(Date.TODAY()+30,anOpportinity.CloseDate, 'The Close Date not match');
     }
 }
